--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <title>React App</title>
+    <title>FIT VN</title>
   </head>
   <body>
     <div id="root"></div>
